--- a/src/app/demo/modules/modules.component.html
+++ b/src/app/demo/modules/modules.component.html
@@ -5,6 +5,9 @@
     <div class="ui segment">
         <h1 class="ui header">Modal</h1>
         <button class="ui button" (click)="modal.show()">show Modal</button>
-        <semui-modal (onShow)="onModalShow($event)" #modal></semui-modal>
+        <semui-modal (onShow)="onModalShow($event)" #modal>
+            <h1 class="ui header" modal-header>
+                <i class="icon book"></i> Modal title</h1>
+        </semui-modal>
     </div>
 </div>
