--- a/src/app/modules/modal/modal.component.html
+++ b/src/app/modules/modal/modal.component.html
@@ -1,20 +1,20 @@
 <div class="ui modal" #modal>
-  <i class="close icon"></i>
-  <div class="header">
-    Modal Title
-  </div>
-  <div class="image content">
-    <div class="image">
-      An image can appear on left or an icon
+    <i class="close icon"></i>
+    <div class="header">
+        <ng-content select="[modal-header]"></ng-content>
     </div>
-    <div class="description">
-      A description can appear on the right
+    <div class="image content">
+        <div class="image">
+            An image can appear on left or an icon
+        </div>
+        <div class="description">
+            A description can appear on the right
+        </div>
     </div>
-  </div>
-  <div class="actions">
-    <div class="ui button">Cancel</div>
-    <div class="ui button">OK</div>
-  </div>
+    <div class="actions">
+        <div class="ui button">Cancel</div>
+        <div class="ui button">OK</div>
+    </div>
 </div>
 
 <!--<div class="ui modal {{class}}">
